deploy/kubernetes/deploys/base.yaml

################################## 
### Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: evemapper
  labels:
    order: "1"
