deploy/kubernetes/deploys/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evemapper-ingress
  namespace: evemapper
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    order: "12"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - [your SUB/DOMAIN]
    secretName: tls-evemapper
  rules:
  - host: [your SUB/DOMAIN]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: evemapper-app-service
            port:
              number: 8080
